fixes sizing on desktop to remove gap in header

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -101,7 +101,7 @@ body{
 
   @include mq(embedSixTwenty){
         width:620px;
-        margin:60px 0 0 30px
+        margin:30px 0 0 30px
   }
 
 
@@ -155,11 +155,11 @@ body{
     height: 445px;
 
     @include mq(embedThreeEighty){
-      height: 455px;
+      height: 450px;
     }
 
     @include mq(embedSixTwenty){
-          height: 650px;
+          height: 640px;
     }
 
   }
